--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.3
   cached_network_image_builder: ^0.2.0
   provider: ^6.0.3
+  get_storage: ^2.0.3
 
 flutter_icons:
   image_path: 'assets/news.jpg'
