--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image_builder: ^0.2.0
   provider: ^6.0.3
   get_storage: ^2.0.3
+  intl: ^0.17.0
 
 flutter_icons:
   image_path: 'assets/news.jpg'
